--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "dumpex",
+  "name": "dumpio",
   "version": "1.0.0",
   "description": "An Electron application with React and TypeScript",
   "main": "dist-electron/main/index.js",
-  "author": "example.com",
+  "author": "nyoncode.cz",
   "homepage": "https://electron-vite.org",
   "scripts": {
     "format": "prettier --write .",
