--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "dumpex",
+  "name": "dumpio",
   "version": "1.0.0",
   "description": "An Electron application with React and TypeScript",
   "main": "dist-electron/main/index.js",
-  "author": "example.com",
-  "homepage": "https://electron-vite.org",
+  "author": "Ondřej Nyklíček",
+  "homepage": "https://nyoncode.cz",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint --cache .",
@@ -52,7 +52,7 @@
   },
   "build": {
     "appId": "com.tcpdumpviewer.app",
-    "productName": "DumpeX",
+    "productName": "Dumpio",
     "directories": {
       "output": "release"
     },
